postgres-db/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: postgres
spec:
  #serviceName: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres-db
          image: postgres:13
          ports:
            - containerPort: 5432
              name: postgres
