postgres-db/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres
  namespace: postgres
spec:
  ports:
    - port: 80
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
