postgres-db/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgres-ingress-route-tcp
  namespace: postgres
spec:
  entryPoints:
    - postgres

  routes:
  - match: HostSNI(`*`)
    services:
    - name: external-svc
      port: 80
      # Here, nativeLB instructs to build the servers load balancer with the Kubernetes Service clusterIP only.
      nativeLB: true
---
apiVersion: v1
kind: Service
metadata:
  name: external-svc
  namespace: postgres
spec:
  externalName: external.domain
  type: ExternalName
  ports:
    - port: 80
